# ESP_HMI_demo

decoder_bench/: partitions.csv  sdkconfig  sdkconfig.ci.perf_esp32  sdkconfig.defaults  sdkconfig.old
decoder_bench/components/esp32_c3_lcdkit/: .component_hash  esp32_c3_lcdkit.c
decoder_bench/components/esp32_c3_lcdkit/include/bsp/: esp32_c3_lcdkit.h
decoder_bench/components/esp_lv_fs/: idf_component.yml
decoder_bench/components/esp_lv_sjpg/: CHANGELOG.md  CMakeLists.txt  README.md  esp_lv_sjpg.c
decoder_bench/components/esp_lv_sjpg/include/: esp_lv_sjpg.h
decoder_bench/components/esp_lv_sjpg/priv_include/: esp_jpeg_dec.h  esp_jpeg_enc.h  esp_jpeg_version.h
decoder_bench/components/esp_lv_spng/: CHANGELOG.md  esp_lv_spng.c  idf_component.yml
decoder_bench/components/esp_lv_sqoi/: esp_lv_sqoi.c
decoder_bench/components/esp_mmap_assets/: esp_mmap_assets.c  project_include.cmake  spiffs_assets_gen.py
decoder_bench/components/esp_mmap_assets/test_apps/: sdkconfig.old
decoder_bench/main/: CMakeLists.txt  idf_component.yml  mmap_generate_Drive_A.h  mmap_generate_Drive_B.h  perf_decoder_fs_esp.c  perf_decoder_fs_lv.c  perf_decoder_spiffs_esp.c  perf_decoder_spiffs_lv.c  perf_decoder_variable_esp.c  perf_test_main.c  perf_test_main.h
decoder_bench/test_assets/: navi_52.sjpg
decoder_bench/test_report/: c3_output.html  decoder_perf.py
esp32c2_devkits_demo/: CMakeLists.txt  flash_args  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
esp32c2_devkits_demo/components/app_wifi/: app_wifi.c  app_wifi.h
esp32c2_devkits_demo/components/buzzer/: CMakeLists.txt  buzzer.c  buzzer.h
esp32c2_devkits_demo/components/esp32_c2_lcdkit/: CMakeLists.txt  esp32_c2_lcdkit.c  esp32_lcdkit_idf4.c  esp32_lcdkit_idf5.c  idf_component.yml
esp32c2_devkits_demo/components/esp32_c2_lcdkit/include/bsp/: display.h  esp-bsp.h  esp32_c2_lcdkit.h
esp32c2_devkits_demo/components/esp_lv_qoi/: CHANGELOG.md  CMakeLists.txt  README.md  esp_lv_qoi.c  idf_component.yml
esp32c2_devkits_demo/components/esp_lv_qoi/include/: esp_lv_qoi.h
esp32c2_devkits_demo/components/esp_lv_qoi/test_apps/: CMakeLists.txt  sdkconfig.old
esp32c2_devkits_demo/components/esp_lv_spng/: esp_lv_spng.c
esp32c2_devkits_demo/components/esp_lv_sqoi/: CMakeLists.txt  README.md  esp_lv_sqoi.c
esp32c2_devkits_demo/components/esp_lv_sqoi/test_apps/: sdkconfig
esp32c2_devkits_demo/components/esp_mmap_assets/: CHANGELOG.md  Kconfig  config_template.json.in  idf_component.yml  project_include.cmake  qoi_conv.py  spiffs_assets_gen.py
esp32c2_devkits_demo/components/esp_mmap_assets/test_apps/: sdkconfig  sdkconfig.defaults
esp32c2_devkits_demo/components/espressif__esp_lcd_gc9a01/: esp_lcd_gc9a01.c
esp32c2_devkits_demo/components/motor/: CMakeLists.txt  motor.c  motor.h
esp32c2_devkits_demo/components/power/: CMakeLists.txt  power.c  power.h
esp32c2_devkits_demo/main/: CMakeLists.txt  button_event.c  button_event.h  idf_component.yml  main.c  main.h  mmap_generate_Drive_A.h  mmap_generate_Drive_B.h  mmap_generate_spiffs_assets.h
esp32c2_devkits_demo/main/0_96_UI/: 0_96_ui.c
esp32c2_devkits_demo/main/1_28_UI/: 1_28_ui.c
esp32c2_devkits_demo/main/1_28_UI/assets/: blue_bg.c  red_bg.c  yellow_bg.c
esp32c2_devkits_demo/main/gui/: ui_main.c  ui_main.h
esp32c2_devkits_demo/main/gui/toothbrush_ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
esp32c2_devkits_demo/main/gui/toothbrush_ui/components/: ui_comp_hook.c
esp32c2_devkits_demo/main/gui/toothbrush_ui/images/: ui_img_bat_container_png.c  ui_img_battery8_png.c  ui_img_bt_off_png.c  ui_img_bt_on_png.c  ui_img_effect0_png.c  ui_img_effect1_png.c  ui_img_effect2_png.c  ui_img_effect3_png.c  ui_img_effect4_png.c  ui_img_esplogo_png.c  ui_img_power_icon_png.c  ui_img_power_off_png.c  ui_img_start_brush_icon_png.c  ui_img_stop_brush_icon_png.c  ui_img_tooth_logox_png.c  ui_img_wifioff_png.c  ui_img_wifion_png.c
esp32c2_devkits_demo/main/gui/toothbrush_ui/screens/: ui_brushing_screen.c  ui_charging_screen.c  ui_evaluation_screen.c  ui_home_screen.c  ui_systemclose_screen.c  ui_systemstart_screen.c
esp32c2_devkits_demo/main/rainmaker/: rainmaker.c  rainmaker.h
esp32c2_devkits_demo/main/ui/: ui_clockScreen.c  ui_factory.c  ui_light_2color.c  ui_menu_new.c  ui_thermostat.c  ui_washing.c
esp_lvgl_port-SIMD/test_apps/simd/benchmark/: sdkconfig  sdkconfig.old
esp_lvgl_port-SIMD/test_apps/simd/functionality/: sdkconfig  sdkconfig.old
perf_benchmark/: partitions.csv  sdkconfig  sdkconfig.ci.perf_esp32c3  sdkconfig.ci.perf_esp32s3  sdkconfig.old
perf_benchmark/components/esp32_c3_lcdkit/: idf_component.yml
perf_benchmark/components/esp_lv_fs/: esp_lv_fs.c
perf_benchmark/components/esp_lv_sjpg/: CHANGELOG.md  CMakeLists.txt  README.md  esp_lv_sjpg.c  idf_component.yml
perf_benchmark/components/esp_lv_sjpg/priv_include/: esp_jpeg_common.h
perf_benchmark/components/esp_lv_sjpg/test_apps/: sdkconfig  sdkconfig.old
perf_benchmark/components/esp_lv_spng/: CHANGELOG.md  CMakeLists.txt  README.md  esp_lv_spng.c  idf_component.yml
perf_benchmark/components/esp_lv_spng/test_apps/: CMakeLists.txt  pytest_esp_lv_spng.py  sdkconfig  sdkconfig.defaults  sdkconfig.old
perf_benchmark/components/esp_lv_sqoi/: esp_lv_sqoi.c  idf_component.yml
perf_benchmark/components/esp_lv_sqoi/include/: esp_lv_sqoi.h
perf_benchmark/components/esp_lv_sqoi/test_apps/: pytest_esp_lv_sjpg.py  sdkconfig.defaults
perf_benchmark/components/esp_mmap_assets/: README.md  spiffs_assets_gen.py
perf_benchmark/components/esp_mmap_assets/test_apps/: partitions.csv
perf_benchmark/main/: CMakeLists.txt  idf_component.yml  mmap_generate_Drive_1.h  mmap_generate_Drive_10.h  mmap_generate_Drive_2.h  mmap_generate_Drive_3.h  mmap_generate_Drive_4.h  mmap_generate_Drive_5.h  mmap_generate_Drive_6.h  mmap_generate_Drive_7.h  mmap_generate_Drive_8.h  mmap_generate_Drive_9.h  perf_test_main.c
qoi_bench/: qoi_bench.py
qoi_bench/image/: light_icon_py.qoi  navi_52.qoi  navi_52_jpg_py.qoi  navi_52_py.qoi  qoi_convert.py
(+17 files in other folders)
